Fixed hover menus position to absolute so the content wont jump

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -147,6 +147,7 @@
 
     &:hover > ul {
       display: flex;
+      position: absolute;
     }
   }
   .#{$mainModifier} {
